# BanfieldBio-Compliance

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
data/: index.json
docs/: index.html  robots.txt
docs/assets/: style.css
docs/item/C1001/: index.html
docs/item/C1008/: index.html
docs/item/C1025/: index.html
docs/item/C1026/: index.html
docs/item/C1028/: index.html
docs/item/C1029/: index.html
docs/item/C1043/: index.html
docs/item/C1048/: index.html
docs/item/C1063/: index.html
scripts/: build_index.py
src/banfieldbio_compliance/: __init__.py  cli.py  config.py  index.py  landing.py  qr.py  urls.py
tests/: conftest.py  test_cli.py  test_config.py  test_index.py  test_landing.py  test_qr.py  test_urls.py
